[package]
name = "philiprehberger-feature-flags"
version = "0.1.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "In-memory feature flag evaluation with rollout and environment support for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-feature-flags"
keywords = ["feature-flags", "feature-toggle", "rollout", "flags", "configuration"]
categories = ["config", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
