[package]
name = "philiprehberger-feature-flags"
version = "0.2.3"
edition = "2021"
authors = ["Philip Rehberger"]
description = "In-memory feature flag evaluation with rollout, environment, targeting, and A/B variant support for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-feature-flags"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-feature-flags"
keywords = ["feature-flags", "feature-toggle", "rollout", "ab-testing", "targeting"]
categories = ["config", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
